test/spec_vectors/load64/fail/module_21.wat
(module (memory i64 1) (func $load8_u_i64 (i64.load8_u (i64.const 0))))